Implementing Example app

--- a/example/src/example.less
+++ b/example/src/example.less
@@ -55,3 +55,9 @@ label {
 	font-style: italic;
 	color: #999;
 }
+
+.ReactCodeMirror {
+	border: 1px solid #ccc;
+}
+
+@import (inline) "../../node_modules/codemirror/lib/codemirror.css";
